--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "web-ifc": "^0.0.50"
-  },
   "devDependencies": {
+    "@types/node": "^24.7.1",
+    "@types/three": "^0.180.0",
     "typescript": "^5.6.3",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "vite-tsconfig-paths": "^5.1.4"
+  },
+  "dependencies": {
+    "three": "^0.149.0",
+    "web-ifc": "^0.0.44",
+    "web-ifc-three": "^0.0.126"
   }
 }
